--- a/index/OpenGL/入门笔记.md
+++ b/index/OpenGL/入门笔记.md
@@ -1,9 +1,9 @@
 # opengl
 
 # 一些概念
-* VBO 顶点缓存对象
-* PBO 像素缓存对象 （GPU缓存）
-* FBO 帧缓存对象
+* VBO 顶点缓存对象 vertext
+* PBO 像素缓存对象 pix  （GPU缓存）
+* FBO 帧缓存对象   frame
 
 # 顶点缓存对象 VBO
 使用顶点数组可以降低函数调用次数与降低共享顶点的重复使用。
@@ -100,3 +100,22 @@ GL_READ_WRITE
 GLboolean glUnmapBuffer(GLenum target)
 ```
 在完成VBO数据的修改之后，必须将缓存对象从客户端内存解除映射。如果成功，glUnmapBuffer()返回GL_TRUE。如返回GL_FALSE，绑定之后的VBO缓存内容是坏的。腐坏现象源自显示器分辨率的改变或窗口系统的特定事件。此种情况，数据必须重发。
+
+
+
+
+## 纹理渲染
+
+glActiveTexture(GL_TEXTURE1);
+glGenTextures(1, &_texture);
+glBindTexture(GL_TEXTURE_2D, _texture);
+    
+glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_MIN_FILTER, _textureOptions.minFilter); // 缩小
+glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_MAG_FILTER, _textureOptions.magFilter);
+// 放大
+//  GL_NEAREST 最近邻法。速度快，有锯齿
+//  GL_LINEAR 双线性插值算法。计算量大
+
+// This is necessary for non-power-of-two textures
+glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_WRAP_S, _textureOptions.wrapS); //水平方向
+glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_WRAP_T, _textureOptions.wrapT); //垂直方向
