--- a/index/Math/简单算法/二分查找.md
+++ b/index/Math/简单算法/二分查找.md
@@ -1,6 +1,10 @@
 
 ## 二分查找
 
+### 问题
+给定一个有序的数组，查找 value 是否在数组中，不存在返回 - 1。
+例如：{1, 2, 3, 4, 5} 找 3，返回下标 2（下标从 0 开始计算）。
+
 ### 算法要求
 1. 必须采用顺序存储结构。
 2. 必须按关键字大小有序排列。
