--- a/index/OpenGL/入门笔记.md
+++ b/index/OpenGL/入门笔记.md
@@ -1,7 +1,7 @@
 # opengl
 
 # 一些概念
-* VBO 顶点缓存对象 vertext
+* VBO 顶点缓存对象 vertext          Buffer Object
 * PBO 像素缓存对象 pix  （GPU缓存）
 * FBO 帧缓存对象   frame
 
