--- a/index/OpenGL/入门笔记.md
+++ b/index/OpenGL/入门笔记.md
@@ -66,7 +66,7 @@ void glBufferSubData(GLenum target, GLintptr offset, GLsizeiptr size, const GLvo
 
 ##### glDeleteBuffers()
 ```
-void glDrawBuffers(GLsizei n, const GLenum* bufs);
+void glDeleteBuffers(GLsizei n, const GLenum* bufs);
 ```
 在VBO不再使用时，你可以使用glDeleteBuffers()删除一个VBO或多个VBO。在混存对象删除之后，它的内容将丢失。
 
@@ -119,3 +119,28 @@ glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_MAG_FILTER, _textureOptions.magFilter)
 // This is necessary for non-power-of-two textures
 glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_WRAP_S, _textureOptions.wrapS); //水平方向
 glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_WRAP_T, _textureOptions.wrapT); //垂直方向
+
+
+
+
+
+### ps
+glVertexAttribPointer 怎么区别使用VBO还是没使用？
+没有用VBO的情况：最后一个参数直接传 C指针
+glVertexAttrib4f(_colorSlot, color[0], color[1], color[2], color[3]);
+glVertexAttribPointer(_positionSlot, 3, GL_FLOAT, GL_FALSE, 0, vertices );
+glEnableVertexAttribArray(_positionSlot);
+glDrawElements(GL_LINES, sizeof(indices)/sizeof(GLubyte), GL_UNSIGNED_BYTE, indices);
+
+用了VBO的情况：最后一个参数传的是 VBO里面的偏移
+glBindBuffer(GL_ARRAY_BUFFER, [_currentVBO vertexBuffer]);
+glVertexAttribPointer(_positionSlot, 3, GL_FLOAT, GL_FALSE, [_currentVBO vertexSize] * sizeof(GLfloat), 0);
+glEnableVertexAttribArray(_positionSlot);
+glBindBuffer(GL_ELEMENT_ARRAY_BUFFER, [_currentVBO lineIndexBuffer]);
+glDrawElements(GL_LINES, [_currentVBO lineIndexCount], GL_UNSIGNED_SHORT, 0);
+
+
+区别是否使用 VBO 就是判断使用之前是否glBindBuffer,若不使用，可以glBindBuffer(GL_ARRAY_BUFFER, 0) 解绑
+
+**iOS 中，若不使用 VBO， glVertexAttribPointer还需要注意，最后一个参数 不能提前释放。**
+
