--- a/index/OpenGL/概念.md
+++ b/index/OpenGL/概念.md
@@ -26,3 +26,7 @@
 ### GLSL
 * GLSL(OpenGL Shading Language)即OpenGL着色语言
 这是一种非常类似于C的程序设计语言。但是，GLSL不会对应用程序流程和逻辑进行控制，而是用于渲染操作。 
+
+
+### 上下文
+* 每个窗口一个上下文，优点是可以保证状态机不互相影响。但多个窗口需要使用同一份纹理，如何避免重复的资源申请呢？答案是上下文之间的图形资源可以共享，先创建上下文A，再以A为输入，创建上下文B，则B可访问在A上下文下创建的纹理资源。纹理、shader、Buffer等资源是可以共享的，但Frame Buffer Object(FBO)、Vertex Array Object（VAO）等容器对象不可共享，但可将共享的纹理和VBO绑定到各自上下文的容器对象上。
