--- a/index/FFmpeg/音视频封装层次.md
+++ b/index/FFmpeg/音视频封装层次.md
@@ -8,8 +8,8 @@
 title 音视频封装
 
 (*) -->  "数据"
---> "协议（http、rtmp）"
---> "封装格式数据（mp4、flv、avi）"
+
+--> [解协议（http、rtmp）]"封装格式数据（mp4、flv、avi）"
 if "解封装" then
 -->[音频]"音频码流数据"
 -->[音频解码]"音频数据"
@@ -18,3 +18,32 @@ else
 -->[视频解码]"视频数据（yuv、rgb、pcm）"
 
 ```
+
+### 解协议的作用
+就是将流媒体协议的数据，解析为标准的相应的封装格式数据。视音频在网络上传播的时候，常常采用各种流媒体协议，例如HTTP，RTMP，或是MMS等等。这些协议在传输视音频数据的同时，也会传输一些信令数据。这些信令数据包括对播放的控制（播放，暂停，停止），或者对网络状态的描述等。解协议的过程中会去除掉信令数据而只保留视音频数据。例如，采用RTMP协议传输的数据，经过解协议操作后，输出FLV格式的数据。
+
+### 解封装的作用
+就是将输入的封装格式的数据，分离成为音频流压缩编码数据和视频流压缩编码数据。封装格式种类很多，例如MP4，MKV，RMVB，TS，FLV，AVI等等，它的作用就是将已经压缩编码的视频数据和音频数据按照一定的格式放到一起。例如，FLV格式的数据，经过解封装操作后，输出H.264编码的视频码流和AAC编码的音频码流。
+
+### 解码的作用
+就是将视频/音频压缩编码数据，解码成为非压缩的视频/音频原始数据。音频的压缩编码标准包含AAC，MP3，AC-3等等，视频的压缩编码标准则包含H.264，MPEG2，VC-1等等。解码是整个系统中最重要也是最复杂的一个环节。通过解码，压缩编码的视频数据输出成为非压缩的颜色数据，例如YUV420P，RGB等等；压缩编码的音频数据输出成为非压缩的音频抽样数据，例如PCM数据。
+
+### 视音频同步的作用
+就是根据解封装模块处理过程中获取到的参数信息，同步解码出来的视频和音频数据，并将视频音频数据送至系统的显卡和声卡播放出来。
+
+
+
+
+## 封装格式
+FLV，MPEG，RMVB等都可以直接依次分包解析，而MP4，AVI一定要依赖索引表才行，而且开始就要固定位置好，如果索引表在尾部，还没办法解析。
+
+
+##### 传输
+在网络上传输音/视频（英文缩写A/V）等多媒体信息目前主要有
+下载和流式传输两种方案。
+流式又分为 
+实时流式、（RTST）
+和顺序流式。
+
+# Q
+RTSP的实时协议 HTTP协议 区别
