--- a/index/OpenGL/过程.md
+++ b/index/OpenGL/过程.md
@@ -25,7 +25,7 @@ d）纹理存储
 e)雾
 已经光栅化的片元具有纹理贴图修正后颜色，可以采用融合因子再融合雾颜色，该融合因子大小根据视点和片元间的距离来定。用glFog*()指定雾化颜色和融合因子。
 
-阶段3.  片元->像素
+## 3. 片元 -> 像素
 OpenGL允许光栅化生成一个片元，只要该片元通过一系列检测就可以修改帧缓冲区中对应象素。如果它通过测试，片元数据可以直接替换帧缓冲区中的已有值，或者和已有值合并，这取决于设置的模式。
 1）象素所有权（ownership）检测
 第一个测试是判断在帧缓冲区中的象素所对应的某个片元是否属于当前OpenGL上下文。如果属于，片元进行下一个测试。如果不属于，窗口系统决定是否忽略该片元，或者是否进行下一步片元操作。
@@ -59,3 +59,63 @@ Alpha测试只能在RGBA模式下进行，如果片元的alpha值超出一个固
 5. 光栅化
 6. 片段着色器 // 可操作
 7. 测试与混合 
+
+
+
+
+##### OpenGL 
+
+VBO/ABO --顶点着色器--> 图元
+
+1.VBO/VAO（顶点缓冲区对象或顶点数组对象）:
+
+VBO/VAO（到底是啥，下回讲解）是cpu提供给GPU的顶点信息，包括了顶点的位置、颜色（只是顶点的颜色，和纹理的颜色无关）、纹理坐标（用于纹理贴图）等顶点信息。
+
+2.VertexShader（顶点着色器）：
+
+顶点着色器是处理VBO/VAO提供的顶点信息的程序。VBO/VAO提供的每个顶点都执行一遍顶点着色器。Uniforms（一种变量类型）在每个顶点保持一致，Attribute每个顶点都不同（可以理解为输入顶点属性）。执行一次VertexShader输出一个Varying和gl_positon。
+
+
+
+3.PrimitiveAssembly（图元装配）：
+
+顶点着色器下一个阶段是图元装配，图元（prmitive）是三角形、直线或者点精灵等几何对象。这个阶段，把顶点着色器输出的顶点组合成图元。
+
+4.rasterization（光栅化）：
+
+光栅化是将图元转化为一组二维片段的过程，然后，这些片段由片段着色器处理（片段着色器的输入）。这些二维片段代表着可在屏幕上绘制的像素。用于从分配给每个图元顶点的顶点着色器输出生成每个片段值的机制称作插值（Interpolation）。这句不是人话的话解释了一个问题，就是从cpu提供的分散的顶点信息是如何变成屏幕上密集的像素的，图元装配后顶点可以理解成变为图形，光栅化时可以根据图形的形状，插值出那个图形区域的像素（纹理坐标v_texCoord、颜色等信息）。注意，此时的像素并不是屏幕上的像素，是不带有颜色的。接下来的片段着色器完成上色的工作。
+
+5.FragmentShader（片段着色器）：
+
+片段着色器为片段（像素）上的操作实现了通用的可编程方法，光栅化输出的每个片段都执行一遍片段着色器，对光栅化阶段生成每个片段执行这个着色器，生成一个或多个（多重渲染）颜色值作为输出。
+
+
+
+6.Per-Fragment Operations（逐片段操作）
+
+在此阶段，每个片段上执行如下功能:
+
+
+
+（1）pixelOwnershipTest（像素归属测试）：
+
+这个用来确定帧缓冲区中位置（x，y）的像素是不是归当前上下文所有。例如，如果一个显示帧缓冲区窗口被另一个窗口所遮蔽，则窗口系统可以确定被遮蔽的像素不属于此opengl的上下文，从而不显示这些像素。
+
+（2）ScissorTest（剪裁测试）：
+
+如果该片段位于剪裁区域外，则被抛弃
+
+（3）StencilTest and DepthTest（模板和深度测试）：
+
+深度测试比较好理解，若片段着色器返回的深度小于缓冲区中的深度，则舍弃。模板测试没有用过，不清楚具体功能，猜测功能应该和名字一样，模板形状内可通过。
+
+（4）Blending（混合）：
+
+将新生成的片段颜色值与保存在帧缓冲区的颜色值组合起来，产生新的RGBA。
+
+（5）dithering（抖动）：
+
+不知道这个是神马作用？
+
+最后把产生的片段放到帧缓冲区（前缓冲区或后缓冲区或FBO）中，若不是FBO，则屏幕绘制缓冲区中的片段，产生屏幕上的像素。
+
